Update blog with new posts and fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,7 @@ select:focus {
 
 .typed-space {
     display: inline-block;
-    width: 0.4em; /* Controls the amount of space */
+    width: 0.2em; /* Reduced from 0.4em to 0.2em */
     opacity: 0;
     animation: fadeIn 0.1s forwards;
 }
